--- a/index.html
+++ b/index.html
@@ -182,8 +182,11 @@
             <p>CSS</p>
             <p>SCSS</p>
             <p>Javascript</p>
-            <p><a target="_blank" rel="noopener noreferrer" href=""><i class="fas fa-link"></i></a></p>
-            <p><a target="_blank" rel="noopener noreferrer" href=""><i class="fab fa-github"></i></a></p>
+            <p>PHP</p>
+            <p><a target="_blank" rel="noopener noreferrer" href="https://matkafel.github.io/portfolio/"><i
+                  class="fas fa-link"></i></a></p>
+            <p><a target="_blank" rel="noopener noreferrer" href="https://github.com/matkafel/portfolio"><i
+                  class="fab fa-github"></i></a></p>
           </div>
         </div>
       </div>
