responsive error remove

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="wrapper">
     <!--     NAV -->
     <div class="nav ">
-      <div class="logo"></div>
+      <a href="/"><div class="logo"></div></a>
 
       <a id="hamburger-icon" href="#" class="open-close-btn ">
         <span class="bar"></span>
