add new project

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <div class="wrapper">
     <!--     NAV -->
     <div class="nav ">
-      <a href="/"><div class="logo"></div></a>
+      <a href="/">
+        <div class="logo"></div>
+      </a>
 
       <a id="hamburger-icon" href="#" class="open-close-btn ">
         <span class="bar"></span>
@@ -186,6 +188,22 @@
             <p><a target="_blank" rel="noopener noreferrer" href="https://matkafel.github.io/portfolio/"><i
                   class="fas fa-link"></i></a></p>
             <p><a target="_blank" rel="noopener noreferrer" href="https://github.com/matkafel/portfolio"><i
+                  class="fab fa-github"></i></a></p>
+          </div>
+        </div>
+      </div>
+      <div class="imgP imgP10">
+        <div class="theCard">
+          <div class="theFront"></div>
+          <div class="theBack">
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>React</p>
+            <p>React Hooks</p>
+            <p>Firebase</p>
+            <p><a target="_blank" rel="noopener noreferrer" href="https://messenger-50130.web.app/"><i
+                  class="fas fa-link"></i></a></p>
+            <p><a target="_blank" rel="noopener noreferrer" href="https://github.com/matkafel/chat-app"><i
                   class="fab fa-github"></i></a></p>
           </div>
         </div>
